# depistage

./: LICENSE.txt  README.md  pyproject.toml  run.py
src/depistage/: __about__.py  __init__.py  depistage.py
