[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depistage"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Siva Mahadevan", email = "me@svmhdvn.name" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ['aiohttp[speedups]']

[project.urls]
Documentation = "https://github.com/svmhdvn/depistage#readme"
Issues = "https://github.com/svmhdvn/depistage/issues"
Source = "https://github.com/svmhdvn/depistage"

[tool.hatch.version]
path = "src/depistage/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/depistage tests}"

[tool.coverage.run]
source_pkgs = ["depistage", "tests"]
branch = true
parallel = true
omit = [
  "src/depistage/__about__.py",
]

[tool.coverage.paths]
depistage = ["src/depistage", "*/depistage/src/depistage"]
tests = ["tests", "*/depistage/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
